<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_recycler_item_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_crd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:contentPaddingBottom="@dimen/default_margin"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_name_txv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/task_type"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="#808080"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_txv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/assigned_task"
                android:textColor="#808080"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_name_txv" />

            <TextView
                android:id="@+id/assigned_by_txv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/assigned_by"
                android:textColor="#808080"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_txv" />

            <TextView
                android:id="@+id/assigned_date_txv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/default_date_time"
                android:textColor="#808080"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assigned_by_txv" />

            <Button
                android:id="@+id/accept_task_btn"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_btn_bg"
                android:text="@string/accept_task"
                android:textColor="@color/milk_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assigned_date_txv" />

            <Button
                android:id="@+id/decline_task_btn"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/rounded_btn_bg"
                android:text="@string/decline_task"
                android:textColor="@color/milk_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/accept_task_btn"
                app:layout_constraintTop_toBottomOf="@+id/assigned_date_txv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

