<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:background="@color/milk_white">

    <TextView
        android:id="@+id/task_date_picker_title_txv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/select_task_due_date"
        android:textColor="@color/company_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/time_picker_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@color/milk_white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_date_picker_title_txv">

        <NumberPicker
            android:id="@+id/day_pick_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/NumberPickerThemeLight" />

        <NumberPicker
            android:id="@+id/hour_pick_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/NumberPickerThemeLight" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="20dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:background="@color/milk_white">

            <TextView
                android:id="@+id/time_separator_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/time_separator"
                android:textColor="@color/company_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <NumberPicker
            android:id="@+id/minute_pick_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/NumberPickerThemeLight" />

        <NumberPicker
            android:id="@+id/time_meridiem_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/NumberPickerThemeLight" />

    </LinearLayout>

    <Button
        android:id="@+id/set_date_time_txv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_btn_bg"
        android:text="@string/set_date_time"
        android:textColor="@color/milk_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_picker_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>